@@ -363,9 +363,13 @@ namespace lsp
             { "utf-7", 65000 },
             { "utf-8", 65001 },
             { "utf16", 1200 },
+            { "utf16-be", 1201 },
+            { "utf16-le", 1200 },
             { "utf16be", 1201 },
             { "utf16le", 1200 },
             { "utf32", 12000 },
+            { "utf32-be", 12001 },
+            { "utf32-le", 12000 },
             { "utf32be", 12001 },
             { "utf32le", 12000 },
             { "utf7", 65000 },
